<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_settings_title">

        <ListPreference
            android:key="@string/pref_purpose_key"
            android:title="@string/pref_purpose_title"
            android:summary="@string/pref_purpose_summary"
            android:entries="@array/pref_purpose_array_names"
            android:entryValues="@array/pref_purpose_array_values"
            android:defaultValue="@string/pref_purpose_default" />

        <CheckBoxPreference
            android:key="@string/pref_force_start_key"
            android:title="@string/pref_force_start_title"
            android:summaryOn="@string/pref_force_start_summary_on"
            android:summaryOff="@string/pref_force_start_summary_off"
            android:defaultValue="@string/pref_force_start_default" />

        <EditTextPreference
            android:key="@string/pref_trip_duration_seconds_key"
            android:title="@string/pref_trip_duration_seconds_title"
            android:dialogTitle="@string/pref_trip_duration_seconds_summary"
            android:summary="@string/pref_trip_duration_seconds_summary"
            android:inputType="number"
            android:defaultValue="@string/pref_trip_duration_seconds_default" />

    </PreferenceCategory>
</PreferenceScreen>
